# simple-video-slicer

./: AGENTS.md  CHANGELOG.md  README.md  README_EN.md  RELEASING.md  pyproject.toml
docs/: project.md  user_guide.md  user_guide_EN.md
src/video_slicer/: __init__.py  main.py
src/video_slicer/core/: format_converter.py  segment_manager.py  video_processor.py
src/video_slicer/models/: segment.py
src/video_slicer/ui/: bulk_segment_dialog.py  main_window.py  preview_dialog.py  processing_worker.py  segment_batch_dialog.py  segment_dialog.py  settings_dialog.py  translations.py
src/video_slicer/utils/: __init__.py  ffmpeg_helper.py  path_utils.py  settings.py  time_parser.py  validators.py
tests/: test_path_utils.py  test_segment_manager.py  test_time_parser.py
utils/: BUILDING.md  build.py  bump_version.py
