[project]
name = "video-slicer"
dynamic = ["version"]
description = "Desktop application for slicing video files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
"video-slicer" = "video_slicer.main:main"
svs = "video_slicer.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "video_slicer.__version__"}
